# monorepo

./: .bazelrc  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.bazel.md  gazelle_python.yaml  go.mod  go.sum  pyproject.toml
.aspect/bazelrc/: BUILD.bazel
.aspect/cli/: config.yaml  shell.star
docs/superpowers/plans/: 2026-04-04-bazel9-upgrade.md  2026-04-04-linear-orgmode-sync.md  2026-04-07-linear-org-sync-priority-sort.md  2026-04-08-linear-canceled-spelling-fix.md  2026-04-08-linear-org-sync-link-metadata.md
docs/superpowers/specs/: 2026-04-04-bazel9-upgrade-design.md  2026-04-04-linear-orgmode-sync-design.md  2026-04-07-linear-org-sync-priority-sort-design.md  2026-04-08-linear-canceled-spelling-fix-design.md  2026-04-08-linear-org-sync-link-metadata-design.md
docs/systemd/: linear-org-sync.service  linear-org-sync.timer
go/examples/hello/: BUILD.bazel  server.go
go/examples/hello/handlers/greeter/: BUILD.bazel  greeter.go
go/hello/: BUILD.bazel  main.go
go/logging/loggerfx/: BUILD.bazel  loggerfx.go
go/net/httpserver/: BUILD.bazel  httpserver.go
go/net/httpserver/handlers/health/: BUILD.bazel  health.go
go/net/httpserver/handlers/terminator/: BUILD.bazel  terminator.go
patches/: rules_nodejs_6.5.2_ccinfo.patch
py/: BUILD.bazel
py/examples/: BUILD.bazel
py/examples/hello_more_tests/: BUILD.bazel  __main__.py  test_greeter.py
py/examples/hello_test_rules/: BUILD.bazel  __main__.py  greeter.py  greeter_test.py
py/examples/hello_tests/: BUILD.bazel  __main__.py  greeter_test.py
py/examples/hello_world/: BUILD.bazel  __main__.py
py/linear_org_sync/: BUILD.bazel  __main__.py  config.py  config_test.py  conftest.py  linear_client.py  linear_client_test.py  org_writer.py  org_writer_test.py
requirements/: all.txt  runtime.txt
tools/: BUILD.bazel  ibazel  repin
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl
