load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//tools/oci:go_image.bzl", "go_image")

go_library(
    name = "hello_lib",
    srcs = ["main.go"],
    importpath = "example.com/monorepo/go/hello",
    visibility = ["//visibility:private"],
    deps = [
        "//go/examples/hello",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    binary = "hello",
)
