load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_pytest_main", "py_test")

py_library(
    name = "linear_org_sync_lib",
    srcs = [
        "__init__.py",
        "config.py",
        "linear_client.py",
        "org_writer.py",
    ],
    deps = [
        "@pip//httpx",
        "@pip//pydantic",
        "@pip//pyyaml",
    ],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "linear_org_sync",
    srcs = ["__main__.py"],
    main = "__main__.py",
    deps = [
        ":linear_org_sync_lib",
        "@pip//absl_py",
    ],
    visibility = ["//visibility:private"],
)

py_pytest_main(
    name = "__test__",
    deps = ["@pip//pytest"],
    args = ["--import-mode=importlib"],
)

py_test(
    name = "linear_org_sync_test",
    size = "small",
    srcs = [
        "config_test.py",
        "linear_client_test.py",
        "org_writer_test.py",
        ":__test__",
    ],
    main = ":__test__.py",
    deps = [
        ":__test__",
        ":linear_org_sync_lib",
        "//py:py",
    ],
)
