load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_pytest_main", "py_test")

py_library(
    name = "linear_org_sync_lib",
    srcs = [
        "__init__.py",
        "config.py",
        "linear_client.py",
        "org_writer.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//httpx",
        "@pip//pydantic",
        "@pip//pyyaml",
    ],
)

py_binary(
    name = "linear_org_sync",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//visibility:private"],
    deps = [
        ":linear_org_sync_lib",
        "@pip//absl_py",
    ],
)

py_pytest_main(
    name = "__test__",
    args = ["--import-mode=importlib"],
    deps = ["@pip//pytest"],
)

py_test(
    name = "linear_org_sync_test",
    size = "small",
    srcs = [
        "config_test.py",
        "linear_client_test.py",
        "org_writer_test.py",
        ":__test__",
    ],
    main = ":__test__.py",
    deps = [
        ":__test__",
        ":linear_org_sync_lib",
        "//py",
    ],
)
