load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "hello",
    srcs = ["server.go"],
    importpath = "example.com/monorepo/go/examples/hello",
    visibility = ["//visibility:public"],
    deps = [
        "//go/examples/hello/handlers/greeter",
        "//go/net/httpserver",
        "@org_uber_go_fx//:go_default_library",
    ],
)
