load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "loggerfx",
    srcs = ["loggerfx.go"],
    importpath = "example.com/monorepo/go/logging/loggerfx",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
