load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_pytest_main", "py_test")

py_library(
    name = "hello_test_rules",
    srcs = [
        "__init__.py",
        "greeter.py",
    ],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "hello_test_rules_bin",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        ":hello_test_rules",
        "@pip//absl_py",
    ],
)

py_test(
    name = "hello_test_rules_test",
    srcs = [
        "greeter_test.py",
        "test_greeter.py",
        ":__test__",
    ],
    main = ":__test__.py",
    deps = [
        ":__test__",
        ":hello_test_rules",
    ],
)

py_pytest_main(
    name = "__test__",
    deps = ["@pip//pytest"],
)
