load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "terminator",
    srcs = ["terminator.go"],
    importpath = "example.com/monorepo/go/net/httpserver/handlers/terminator",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
